fix header-logo text wrapping issue

--- a/assets/sass/elements/_header.scss
+++ b/assets/sass/elements/_header.scss
@@ -82,6 +82,7 @@
 	line-height: $line-height-h4;
 	margin: 0 $grid-gutter;
 	padding: (($nav-height - $line-height-h4) / 2) 0;
+	white-space: nowrap;
 	&:focus,
 	&:hover {
 		text-decoration: none;
