--- a/css/base.css
+++ b/css/base.css
@@ -5898,6 +5898,7 @@ div[data-toggle="tile"] [data-ignore="tile"] {
   line-height: 28px;
   margin: 0 16px;
   padding: 10px 0;
+  white-space: nowrap;
 }
 .header-logo:focus, .menu-logo:focus, .header-logo:hover, .menu-logo:hover,
 .header-text:focus,
